# python-repo-configs

./: .flake8  .isort.cfg  .pre-commit-config.yaml  .rgignore  README.md  pyprightconfig.json  pyproject.toml  pyrightconfig.json  pytest.ini
src/tests/: conftest.py
