[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 80
skip-magic-trailing-comma = true
target-version = ["py39"]


[tool.poetry]
name = "python-repo-configs"
version = "0.1.0"
description = "Common configurations to my Python repositories"
authors = ["Derek Wan <d.wan@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typed-settings = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^3.9"
flake8-codes = "^0.1"
hypothesis = "^6.35"
isort = "^5.10"
pdbpp = "^0.10"
pre-commit = "^2.16.0"
pyclean = "^2.0"
pytest = "^6.2"
rich = "^11.0"
# flake8 extensions
flake8-absolute-import = "^1.0"
flake8-alphabetize = "^0.0"
flake8-annotations = "^2.7"
flake8-bandit = "^2.1"
flake8-bugbear = "^21.11"
flake8-builtins = "^1.5"
flake8-comprehensions = "^3.8"
flake8-debugger = "^4.0"
flake8-eradicate = "^1.2"
flake8-executable = "^2.1"
flake8-implicit-str-concat = "^0.2"
flake8-length = "^0.2"
flake8-mutable = "^1.2"
flake8-no-pep420 = "^2.1"
flake8-pep3101 = "^1.3"
flake8-pie = "^0.15"
flake8-print = "^4.0"
flake8-pytest-style = "^1.6"
flake8-simplify = "^0.14"
flake8-string-format = "^0.3"
flake8-type-checking = "^1.2"
flake8-typing-imports = "^1.12"
flake8-unused-arguments = "^0.0"
flake8-use-fstring = "^1.3"
flake8-variables-names = "^0.0"
pep8-naming = "^0.12"
# pytest extensions
pytest-instafail = "^0.4"
pytest-randomly = "^3.8"
pytest-xdist = "^2.3"
